? - xdebug 1.1.0

+ Implemented correct handling of include/require and eval. (Derick)


Mon Oct 22, 2002 - xdebug 1.1.0pre1

+ Added automatic starting of function traces (xdebug.auto_trace, defaulting to
  "off"). (Derick)
- Xdebug no longer supports PHP versions below PHP 4.3.0pre1. (Derick)
+ Added gdb compatible debugger handler with support for simple (function only)
  breakpoints. (Derick)
= Implemented a new way to get class names and file names. (Derick, Thies C.
  Arntzen <thies@thieso.net>)
+ Added time-index and memory footprint to CLI dumps. (Derick)
+ Implemented remote debugger handler abstraction. (Derick)
+ Added a php3 compatible debugger handler. (Derick)


Sun Sep 1, 2002 - xdebug 1.0.0rc1

+ Implemented gathering of parameters to internal functions (only available
  in combination with PHP 4.3.0-dev). (Derick)
= Implemented a new way to get class names and file names. (Derick, Thies C.
  Arntzen <thies@thieso.net>)
+ Added support for error messages with stack trace in syslog. (Sergio
  Ballestrero <s.ballestrero@planetweb.it>)
= Windows compilation fixes. (Derick)


Sun Jun 23, 2002 - xdebug 0.9.0

= Fixed a problem with output buffering in PHP. (Derick)
= Fixed a memory leak in delayed included files. (Derick)
+ Added support for PHP 4.1.2. (Derick)
= Rewrote xdebug_get_function_stack() and xdebug_get_function_trace() to return
  data in multidimensional arrays. (Derick)
= Fixed compiling without memory limit enabled (Sander Roobol, Derick)
+ Add support for classnames, variable include files and variable
  function names. (Derick)
+ Implemented links to the PHP Manual in traces. (Derick)
+ Added timestamps and memory usage to function traces. (Derick)
= Fixed crash when using an user defined session handler. (Derick)
+ Implemented variable function names ($a = 'foo'; $f();) for use in
  traces. (Derick)


Sun May 26, 2002 - xdebug 0.8.0 - Yoda

+ Implemented much better parameter tracing for user defined
  functions. (Derick)