@@ -2,4 +2,5 @@
 *.log
 *.out
 *.exp
+*.php
 *.swp
