@@ -1,5 +1,8 @@
 ? - xdebug 1.1.0
 
++ Added xdebug.collect_params setting. If this setting is on (the default)
+  then Xdebug collects all parameters passed to functions, otherwise they
+  are not collected at all. (Derick)
 + Implemented correct handling of include/require and eval. (Derick)
 
 
